package edu.hitsz.observer;

public interface Observer {
    void update();
}
