@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}
abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
 }
 AbstractAircraft <|-- AbstractEnemyAircraft
 abstract class AbstractEnemyAircraft
 {
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {abstract}createItems(): List<BaseItem>
 }

 interface Observer{
     +{abstract} update():void
 }


class HeroAircraft {
     -{static} heroAircraft:HeroAircraft
     - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
     +{static} getHeroAircraft():HeroAircraft
    + forward():void
    + shoot():List<BaseBullet>
    + increaseHp(int increase):void
}

AbstractAircraft <|-- HeroAircraft

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + update():void
    + createItems(): List<BaseItem>
}
AbstractEnemyAircraft <|-- MobEnemy
Observer <|.. MobEnemy

class EliteEnemy{
    + EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + update():void
    + createItems(): List<BaseItem>
}
AbstractEnemyAircraft <|-- EliteEnemy
Observer <|.. EliteEnemy

class ElitePlusEnemy{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + update():void
    + createItems(): List<BaseItem>
}
AbstractEnemyAircraft <|-- ElitePlusEnemy
Observer <|.. ElitePlusEnemy

class BossEnemy{
    + ElitePlusEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
    + update():void
    + createItems(): List<BaseItem>
}
AbstractEnemyAircraft <|-- BossEnemy
Observer <|.. BossEnemy

abstract class BaseBullet
{
    - power:int
    + BaseBullet(int locationX, int locationY, int speedX, int speedY, int power)
    + forward():void
	+ getPower():int
	+ createItems():List<BaseItem>
}

class HeroBullet {
    + HeroBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
}

class EnemyBullet {
    + EnemyBullet(int locationX, int locationY,
     int speedX, int speedY, int power)
     + update():void
}
abstract class BaseItem{
    + {abstract}work(AbstractFlyingObject flyingObject):void;
}

class Blood{
    + Blood(int locationX, int locationY, int speedX, int speedY);
    + work(AbstractFlyingObject flyingObject):void;
}
class Bomb{
    + Bomb(int locationX, int locationY, int speedX, int speedY);
    + work(AbstractFlyingObject flyingObject):void;
}
class Fire{
    + Fire(int locationX, int locationY, int speedX, int speedY);
    + work(AbstractFlyingObject flyingObject):void;
}
class FirePlus{
    + FirePlus(int locationX, int locationY, int speedX, int speedY);
    + work(AbstractFlyingObject flyingObject):void;
}


BaseBullet <|-- HeroBullet
BaseBullet <|-- EnemyBullet
Observer <|.. EnemyBullet

AbstractFlyingObject <|-- AbstractAircraft
AbstractFlyingObject <|-- BaseBullet
AbstractFlyingObject <|-- BaseItem

BaseItem <|-- Blood
BaseItem <|-- Bomb
BaseItem <|-- Fire
BaseItem <|-- FirePlus


@enduml